[package]
name = "algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
chrono = "0.4.31"
csv = "*"
diesel = "*"
deadpool-postgres = "*"
serde = "*"
serde_json = "*"
pathfinding = "*"
petgraph = "*"
gtfs-structures = "0.38.0"
gtfs-rt = "*"
osmgraphing = "1.1.1"
actix-postgres = "*"
qstring = "0.7"
tokio = { version = "*", features = ["full"] }
tokio-postgres = "*"
[[bin]]
name = "actix"
path = "src/actix.rs"
[[bin]]
name = "algo"
path = "src/algo.rs"

[[bin]]
name = "csv"
path = "src/csv.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "gtfs"
path = "src/gtfs.rs"

[[bin]]
name = "snap"
path = "src/snap.rs"
