[package]
name = "algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
chrono = "0.4.31"
csv = "*"
derive_more = "0.99.17"
diesel = "*"
deadpool-postgres = "*"
serde = "*"
serde_json = "*"
pathfinding = "*"
petgraph = "*"
gtfs-structures = "0.38.0"
gtfs-rt = "*"
osmgraphing = "1.1.1"
actix-postgres = "*"
qstring = "0.7"
regex = "1.10.2"
rand = "0.8.5"
rayon = "1.8.0"
tokio = { version = "*", features = ["full"] }
tokio-postgres = "*"
tokio-pg-mapper = "*"
tokio-pg-mapper-derive = "*"
actix_block_ai_crawling = "0.2.8"

[[bin]]
name = "actix"
path = "src/gtfs-backend/actix.rs"
[[bin]]
name = "algo"
path = "src/algo.rs"

[[bin]]
name = "csv"
path = "src/csv.rs"

[[bin]]
name = "geodesic"
path = "src/geodesic.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "gtfs"
path = "src/gtfs.rs"

[[bin]]
name = "import"
path = "src/gtfs-backend/import.rs"

[[bin]]
name = "parallel"
path = "src/parallel.rs"