[package]
name = "algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
approx = "0.5.1"
arguments = "*"
chrono = "0.4.34"
csv = "*"
derive_more = "0.99.17"
diesel = "*"
deadpool-postgres = "*"
serde = "*"
serde_json = "*"
pathfinding = "*"
petgraph = "*"
gtfs-structures = "0.39.1"
gtfs-rt = "*"
geo = "0.27.0"
itertools = "0.12.0"
osmgraphing = "1.1.1"
actix-postgres = "*"
qstring = "0.7"
rand = "0.8.5"
rayon = "1.8.0"
geographiclib-rs = "0.2.3"
tokio = { version = "*", features = ["full"] }
tokio-postgres = "*"
tokio-pg-mapper = "*"
tokio-pg-mapper-derive = "*"
actix_block_ai_crawling = "0.2.8"
vpsearch = "2.0.1"

[[bin]]
name = "actix"
path = "src/gtfs-backend/actix.rs"

[[bin]]
name = "algo"
path = "src/algo.rs"

[[bin]]
name = "csv"
path = "src/csv.rs"

[[bin]]
name = "geodesic2"
path = "src/geodesic2.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "percent_distance"
path = "src/percent_distance.rs"

[[bin]]
name = "gtfs"
path = "src/gtfs.rs"

[[bin]]
name = "import"
path = "src/gtfs-backend/import.rs"

[[bin]]
name = "linestring"
path = "src/linestring.rs"
